<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/felt">

    <Button
        android:id="@+id/id_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/cd_create_button_title"
        android:text="@string/en_create_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/cd_login_button_title"
        android:text="@string/en_login_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/id_email_field"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFEB3B"
        android:ems="10"
        android:hint="@string/en_hint_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorEditBox"
        android:textColorHint="@color/colorHints"
        app:layout_constraintBottom_toTopOf="@+id/id_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_email_title"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/id_password_field"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFEB3B"
        android:ems="10"
        android:hint="@string/en_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorEditBox"
        android:textColorHint="@color/colorHints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_password_title"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/id_password_field2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFEB3B"
        android:ems="10"
        android:hint="@string/en_hint_password2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorEditBox"
        android:textColorHint="@color/colorHints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_repeat_password_title"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/id_img_sneakers"
        android:layout_width="202dp"
        android:layout_height="142dp"
        android:layout_marginEnd="68dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_shoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sneakers" />

    <TextView
        android:id="@+id/id_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_password_title"
        android:text="@string/en_password_title"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/id_password_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_email_field" />

    <TextView
        android:id="@+id/id_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/cd_email_title"
        android:text="@string/en_login_email_title"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/id_email_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_img_sneakers" />

    <TextView
        android:id="@+id/id_repeat_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_repeat_title"
        android:text="@string/en_repeat_title"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_password_field" />

    <ImageView
        android:id="@+id/id_image_en_flag"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_english_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/english" />

    <ImageView
        android:id="@+id/id_image_fr_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/cd_french_flag"
        app:layout_constraintBottom_toBottomOf="@+id/id_img_sneakers"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/french" />

</androidx.constraintlayout.widget.ConstraintLayout>